Update v:0.1.6 - Fix ReactMessages visibility

--- a/src/css/component/Message.css
+++ b/src/css/component/Message.css
@@ -1,4 +1,5 @@
 .rm-wrapper {
+  position: fixed;
   z-index: 1000;
 }
 .rm-item {
